--- a/bttf.html
+++ b/bttf.html
@@ -131,7 +131,7 @@
 
       window.addEventListener('load', setup);
 
-      window.addEventListener('resize', setup);
+      //window.addEventListener('resize', setup);
     </script>
   
   </body>
