Updated Fish Images
Added to HTML and files

--- a/fish.html
+++ b/fish.html
@@ -38,11 +38,11 @@
   <body>
   
     <div style="display: none;">
-      <img id='fish' src="fishimages/billybass.png" alt="Billy Big Mouth Bass">
+      <img id='fish' src="fishimages/newbilly.png" alt="Billy Big Mouth Bass">
     </div>
     
     <div  style="display: none;">
-        <img id='lip' src="fishimages/lip.png" alt="Fish Lip">
+        <img id='lip' src="fishimages/newlip.png" alt="Fish Lip">
     </div>
 
     <button class="button" onclick="talk()"></button>
@@ -208,9 +208,6 @@
         counter += 1;
 
       }
-
-
-
 
 
 
