Minor Updates to Glass HTML

--- a/glass.html
+++ b/glass.html
@@ -28,11 +28,11 @@
   </div>
     
     <div  style="display: none;">
-        <img id='glass' src="glassimages/wineglass.png" alt="McFly Family">
+        <img id='glass' src="glassimages/wineglass.png" alt="Wine Glass">
     </div>
 
     <div  style="display: none;">
-      <img id='broken' src="glassimages/crackedtabletop.jpeg" alt="McFly Family">
+      <img id='broken' src="glassimages/crackedtabletop.jpeg" alt="Broken Glass Table">
   </div>
 
 
